--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,20 @@
-version: '3.8'
+version: '3.9'
 services:
-  db:
-    image: postgres:14.1-alpine
-    restart: always
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-    ports:
-      - '5432:5432'
-    volumes: 
-      - db:/var/lib/postgresql/data
-      - ./db/init.sql:/docker-entrypoint-initdb.d/create_tables.sql
-  api:
-    image: nestjs/apiv2
-    depends_on:
-      - db
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - 3000:3000
-    environment:
-      NODE_ENV: production
-      DB_HOST: db
-      DB_PORT: 5432
-      DB_USER: postgres
-      DB_PASSWORD: postgres
-      DB_NAME: postgres
-    links:
-      - db
     volumes:
-      - './:/src'
-volumes:
+      - ./src:/app/src
+    depends_on:
+      - db
+
   db:
-    driver: local
+    image: postgres
+    restart: always
+    ports:
+      - 5432:5432
+    environment:
+      POSTGRES_PASSWORD: postgres
